--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
       name="keywords"
       content="portfolio front-end back-end full-stack web developer"
     />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
