Styled the about section

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       name="keywords"
-      content="portfolio front-end back-end full-stack web developer"
+      content="portfolio front-end back-end full-stack web developer HTML CSS JavaScript React NodeJS MongoDB MySQL SQL Express"
     />
     <!-- Favicon -->
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
@@ -77,18 +77,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <!-- TODO : Uncomment the lines below to get the google fonts -->
-
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;600;800&family=Open+Sans:ital,wght@0,300;0,400;0,800;1,600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;600;800&family=Pacifico&family=Open+Sans:ital,wght@0,300;0,400;0,800;1,600&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
-      rel="stylesheet"
-    />
-    <title>Edouard Misset Portfolio</title>
+    <title>Full-Stack JS developer - Edouard Misset</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
